--- a/config.yaml
+++ b/config.yaml
@@ -152,7 +152,7 @@ proxy-providers:
   MODEM1:
     type: http
     path: "./modem1.yaml"
-    url: https://bit.ly/3PRCNPb
+    url: https://raw.githubusercontent.com/clashz3ro/AUTO-CFA/main/modem1.yaml
     interval: 3600
     health-check:
       enable: true
@@ -161,7 +161,7 @@ proxy-providers:
   MODEM2:
     type: http
     path: "./modem2.yaml"
-    url: http://bit.ly/3hUoj4w
+    url: https://raw.githubusercontent.com/clashz3ro/AUTO-CFA/main/modem2.yaml
     interval: 3600
     health-check:
       enable: true
