--- a/modem1.yaml
+++ b/modem1.yaml
@@ -31,3 +31,19 @@ proxies:
       headers: 
         Host: do2.kitu.xyz
     udp: true
+  - name: S5🚀
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: 6fea1649-425b-4092-bf53-29792152c925
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: 123
+    network: ws
+    ws-opts: 
+      path: /sshkit/ggvvyhgvjj/63ace0ccee2a5/
+      headers: 
+        Host: 123
+    udp: true
