--- a/modem1.yaml
+++ b/modem1.yaml
@@ -32,18 +32,17 @@ proxies:
         Host: do2.kitu.xyz
     udp: true
   - name: S5🚀
+    type: ss
     server: 104.26.7.171
     port: 80
-    type: vmess
-    uuid: 6fea1649-425b-4092-bf53-29792152c925
-    alterId: 0
-    cipher: auto
-    tls: false
-    skip-cert-verify: false
-    servername: 123
-    network: ws
-    ws-opts: 
-      path: /sshkit/ggvvyhgvjj/63ace0ccee2a5/
-      headers: 
-        Host: 123
-    udp: true
+    cipher: 2022-blake3-aes-128-gcm
+    password: KqXquXaK0GYCxQ2mX7jLig==:vxgkHN8hrU7iUbM+gl+NTg==
+    udp-over-tcp: true
+    plugin: v2ray-plugin
+    plugin-opts:
+      mode: websocket
+      host: do1.kitu.xyz
+      path: /ssws/
+      tls: false
+      skip-cert-verify: true
+      mux: false
