--- a/modem1.yaml
+++ b/modem1.yaml
@@ -15,3 +15,19 @@ proxies:
       headers: 
         Host: sg2.v2-ray.com
     udp: true
+  - name: S3🚀
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: bccdad80-878e-11ed-b432-205c6d5f5d78
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: www.midtrans.com
+    network: ws
+    ws-opts: 
+      path: /fastssh
+      headers: 
+        Host: sg1.v2-ray.com
+    udp: true
