--- a/config.yaml
+++ b/config.yaml
@@ -1,339 +1,234 @@
----
-port: 7890
-socks-port: 7891
-redir-port: 7892
-tproxy-port: 7895
-mixed-port: 7893
+redir-port: 9797
+tproxy-port: 9898
+mode: rule
 allow-lan: true
-mode: script
-log-level: info
+unified-delay: true
+bind-address: '*'
+# info / warning / error / debug / silent
+log-level: silent
 ipv6: false
-external-controller: 0.0.0.0:9090
-external-ui: folder
+geodata-mode: true
+geodata-loader: memconservative
+external-controller: 0.0.0.0:9090 
+# external-controller-tls: 0.0.0.0:9091 # RESTful API HTTPS device
+# secret: "123456"
+external-ui: ./dashboard/dist
+# tcp-concurrent: false
+# inbound-tfo: false
+# global-client-fingerprint: chrome
+# interface-name: "rmnet_data+"
+# routing-mark: 233
+geox-url:
+  mmdb: "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb"
+  geoip: "https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/geoip.dat"
+  geosite: "https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/geosite.dat"
+find-process-mode: always
+
+profile:
+  store-selected: true
+  store-fake-ip: false
+
+# experimental:
+  # sniff-tls-sni: false
+  # udp-fallback-match: false
+
+# sniffer:
+  # enable: false
+  # ## 对 redir-host 类型识别的流量进行强制嗅探
+  # ## 如：Tun、Redir 和 TProxy 并 DNS 为 redir-host 皆属于
+  # force-dns-mapping: true
+  # parse-pure-ip: true
+  # override-destination: true
+  # sniff:
+    # TLS:
+    # #  ports:[443, 8443]
+    # HTTP:
+      # ports: [80, 8080-8880]
+      # override-destination: true
+  # force-domain:
+    # - +.v2ex.com
+  # # skip-domain:
+    # # - +.google.com
+  # sniffing:
+    # - tls
+    # - http
+  # port-whitelist:
+    # - "80"
+    # - "443"
+
+# tun:
+  # enable: true
+  # # biarkan default utun
+  # device: utun
+  # mtu: 9000
+  # # gvisor / lwip / system
+  # stack: system
+  # dns-hijack:
+    # - any:53
+  # # bagi yg awam, kalau TUN on wajib true, only armv8/64
+  # auto-route: true
+  # auto-detect-interface: true
+  # # end
+  # inet4-address: 172.19.0.1/30
+  # inet6-address: [fdfe:dcba:9876::1/126]
+  # strict_route: false
+  # # include_android_user:
+  # # - 0
+  # # - 10
+  # # include_package:
+  # # - com.android.chrome
+  # # exclude_package:
+  # # - com.android.captiveportallogin
+
 dns:
   enable: true
   ipv6: false
-  enhanced-mode: fake-ip
-  listen: 0.0.0.0:7874
-  fallback-filter:
-    geoip: true
-    geoip-code: ID
-    ipcidr:
-    - 0.0.0.0/8
-    - 10.0.0.0/8
-    - 100.64.0.0/10
-    - 127.0.0.0/8
-    - 169.254.0.0/16
-    - 172.24.0.0/16
-    - 172.16.0.0/12
-    - 192.0.0.0/24
-    - 192.0.2.0/24
-    - 192.88.99.0/24
-    - 192.168.0.0/16
-    - 198.18.0.0/15
-    - 198.51.100.0/24
-    - 203.0.113.0/24
-    - 224.0.0.0/4
-    - 240.0.0.0/4
-    - 255.255.255.255/32
-    domain:
-    - "+.google.com"
-    - "+.netflix.com"
-    - "+.facebook.com"
-    - "+.youtube.com"
-    - "+.githubusercontent.com"
-    - "+.googlevideo.com"
-    - "+.msftconnecttest.com"
-    - "+.msftncsi.com"
-    - msftconnecttest.com
-    - msftncsi.com
-    fake-ip-filter:
-    - "+.pool.ntp.org"
-    - ntp7.*.com
-    - ntp6.*.com
-    - ntp5.*.com
-    - ntp4.*.com
-    - ntp3.*.com
-    - ntp2.*.com
-    - ntp1.*.com
-    - ntp.*.com
-    - time7.*.com
-    - time6.*.com
-    - time5.*.com
-    - time4.*.com
-    - time3.*.com
-    - time2.*.com
-    - time1.*.com
-    - time.*.apple.com
-    - time.*.edu.cn
-    - time.*.gov
-    - time.*.com
-    - "*.home.arpa"
-    - "*.local"
-    - "*.test"
-    - "*.localhost"
-    - "*.invalid"
-    - "*.example"
-    - "*.localdomain"
-    - time1.cloud.tencent.com
-    - "*.ntp.org"
-    - "*.time.edu"
-    - "*.lan"
-    - "*.ntp.org.cn"
-    - "*.time.edu.cn"
-    - "+.*"
-  fake-ip-range: 198.18.0.1/16
-  nameserver:
-  - https://dns.adguard-dns.com:3000/dns-query
-  - tls://dns.adguard-dns.com:3000
-  - 74.82.42.42
-  - 103.133.222.202
+  prefer-h3: true
   default-nameserver:
-  - 74.82.42.42
-  - 103.133.222.202
+    # cloudflare
+    - '1.1.1.1#BFM'
+    # google
+    - '8.8.8.8'
+  listen: 0.0.0.0:1053
+  use-hosts: true
+  # redir-host / fake-ip
+  enhanced-mode: fake-ip
+  fake-ip-range: 28.0.0.1/8
   fake-ip-filter:
-  - "*.lan"
-  - "*.localdomain"
-  - "*.example"
-  - "*.invalid"
-  - "*.localhost"
-  - "*.test"
-  - "*.local"
-  - "*.home.arpa"
-  - time.*.com
-  - time.*.gov
-  - time.*.edu.cn
-  - time.*.apple.com
-  - time-ios.apple.com
-  - time1.*.com
-  - time2.*.com
-  - time3.*.com
-  - time4.*.com
-  - time5.*.com
-  - time6.*.com
-  - time7.*.com
-  - ntp.*.com
-  - ntp1.*.com
-  - ntp2.*.com
-  - ntp3.*.com
-  - ntp4.*.com
-  - ntp5.*.com
-  - ntp6.*.com
-  - ntp7.*.com
-  - "*.time.edu.cn"
-  - "*.ntp.org.cn"
-  - "+.pool.ntp.org"
-  - time1.cloud.tencent.com
-  - "+.msftconnecttest.com"
-  - "+.msftncsi.com"
-  - "+.msftconnecttest.com"
-  - "+.msftncsi.com"
-  - stun.*.*
-  - stun.*.*.*
-  - "+.stun.*.*"
-  - "+.stun.*.*.*"
-  - "+.stun.*.*.*.*"
-  - "+.stun.*.*.*.*.*"
-  - "*.linksys.com"
-  - "*.linksyssmartwifi.com"
-  - "*.router.asus.com"
-  - mesu.apple.com
-  - swscan.apple.com
-  - swquery.apple.com
-  - swdownload.apple.com
-  - swcdn.apple.com
-  - swdist.apple.com
-  - lens.l.google.com
-  - "+.google.com"
-  - Mijia Cloud
-  - "+.cmbchina.com"
-  - "+.cmbimg.com"
+    - '+.lan'
+  nameserver:
+    # cloudflare
+    - '1.1.1.1'
+    - 'tls://1.0.0.1:853#BFM'
+    # google
+    - '8.8.8.8#BFM'
+    - 'tls://8.8.4.4:853'
+  # proxy-server-nameserver:
+    # - '1.1.1.1'
+  # nameserver-policy: { "geosite:youtube": [1.1.1.1, 8.8.8.8] }
+
+  fallback:
+    - 'https://8.8.8.8/dns-query'
+    - 'tcp://8.8.4.4'
+    - 'quic://dns.adguard.com:784'
+  fallback-filter:
+    geoip: false
+    geoip-code: '!ID'
+    geosite:
+      # - gfw
+    ipcidr:
+      # - 240.0.0.0/4
+    domain:
+      - '+.google.com'
+      - '+.facebook.com'
+      - '+.youtube.com'
+      - '+.github.com'
+
+hosts:
+  # block update system android
+  'ota.googlezip.net': 127.0.0.1
+  'ota-cache1.googlezip.net': 127.0.0.1
+  'ota-cache2.googlezip.net': 127.0.0.1
+
+proxies:
 proxy-providers:
-  MODEM1:
+  KONEKSI_1:
     type: http
-    path: "./modem1.yaml"
-    url: https://raw.githubusercontent.com/clashz3ro/AUTO-CFA/main/modem1.yaml
-    interval: 3600
+    path: ./confs/clash_1.yaml
+    url: "https://raw.githubusercontent.com/clashz3ro/AUTO-CFM/main/clash_1.yaml"
+    interval: '60'
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
-      interval: 99
-  MODEM2:
+      interval: '60'
+  KONEKSI_2:
     type: http
-    path: "./modem2.yaml"
-    url: https://raw.githubusercontent.com/clashz3ro/AUTO-CFA/main/modem2.yaml
-    interval: 3600
+    path: ./confs/clash_2.yaml
+    url: "https://raw.githubusercontent.com/clashz3ro/AUTO-CFM/main/clash_2.yaml"
+    interval: '60'
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
-      interval: 99
+      interval: '60'
 proxy-groups:
-- name: SIMASTER-AUTO
-  type: select
-  disable-udp: false
-  proxies:
-  - LOADBALANCE
-  - MODEM1-ONLY
-  - MODEM2-ONLY
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: LOADBALANCE
-  type: load-balance
-  strategy: round-robin
-  disable-udp: false
-  proxies:
-  - MODEM1-ONLY
-  - MODEM2-ONLY
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: MODEM1-ONLY
-  type: select
-  disable-udp: false
-  proxies:
-  - MODEM1-SELECT
-  - MODEM1-PING
-  - MODEM1-FALLBACK
-  - MODEM1-LOADBALANCE
-  - DIRECT
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: MODEM2-ONLY
-  type: select
-  disable-udp: false
-  proxies:
-  - MODEM2-SELECT
-  - MODEM2-PING
-  - MODEM2-FALLBACK
-  - MODEM2-LOADBALANCE
-  - DIRECT
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: MODEM1-SELECT
-  type: select
-  disable-udp: false
-  use:
-  - MODEM1
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: MODEM2-SELECT
-  type: select
-  disable-udp: false
-  use:
-  - MODEM2
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: MODEM1-PING
+- name: SIMASTER-MAGISK-AUTO
   type: url-test    
-  interval: '30'
-  tolerance: '99'
+  interval: '60'
+  tolerance: '300'
+  disable-udp: false
+  url: http://www.gstatic.com/generate_204
+  proxies:
+  - KONEKSI-PING
+- name: KONEKSI-PING
+  type: url-test    
+  interval: '60'
+  tolerance: '300'
   disable-udp: false
   url: http://www.gstatic.com/generate_204
   use:
-  - MODEM1
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: MODEM2-PING
-  type: select
-  disable-udp: false
-  use:
-  - MODEM2
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: MODEM1-FALLBACK
-  type: select
-  disable-udp: false
-  use:
-  - MODEM1
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: MODEM2-FALLBACK
-  type: select
-  disable-udp: false
-  use:
-  - MODEM2
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: MODEM1-LOADBALANCE
-  type: load-balance
-  strategy: round-robin
-  disable-udp: false
-  use:
-  - MODEM1
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
-- name: MODEM2-LOADBALANCE
-  type: load-balance
-  strategy: round-robin
-  disable-udp: false
-  use:
-  - MODEM2
-  url: http://www.gstatic.com/generate_204
-  interval: '99'
+    - KONEKSI_1
+    - KONEKSI_2
 - name: WHATSAPP
   type: select
   disable-udp: false
   proxies:
-  - LOADBALANCE
-  - MODEM1-ONLY
-  - MODEM2-ONLY
-  - DIRECT
+    - SIMASTER-MAGISK-AUTO
+    - DIRECT
   url: http://www.gstatic.com/generate_204
-  interval: '99'
+  interval: '60'
 - name: GAMING
   type: select
   disable-udp: false
   proxies:
-  - LOADBALANCE
-  - MODEM1-ONLY
-  - MODEM2-ONLY
-  - DIRECT
+    - SIMASTER-MAGISK-AUTO
+    - DIRECT
   url: http://www.gstatic.com/generate_204
-  interval: '99'
+  interval: '60'
 rule-providers:
   Game:
     type: http
     behavior: domain
-    path: "./rule-game.yaml"
+    path: ./confs/rule-game.yaml
     url: https://bit.ly/3X2SvcL
-    interval: 3600
+    interval: 60
   Sosmed:
     type: http
     behavior: domain
-    path: "./rule-sosmed.yaml"
+    path: ./confs/rule-sosmed.yaml
     url: https://bit.ly/3I4HG5I
-    interval: 3600
+    interval: 60
   Stream:
     type: http
     behavior: domain
-    path: "./rule-stream.yaml"
+    path: ./confs/rule-stream.yaml
     url: https://bit.ly/3PU6RJP
-    interval: 3600
+    interval: 60
   Olshop:
     type: http
     behavior: domain
-    path: "./rule-olshop.yaml"
+    path: ./confs/rule-olshop.yaml
     url: https://bit.ly/3Wp85PH
-    interval: 3600
+    interval: 60
   Bank:
     type: http
     behavior: domain
-    path: "./rule-bank.yaml"
+    path: ./confs/rule-bank.yaml
     url: https://bit.ly/3hN7JUh
-    interval: 3600
+    interval: 60
   Whatsapp:
     type: http
     behavior: domain
-    path: "./rule-whatsapp.yaml"
+    path: ./confs/rule-whatsapp.yaml
     url: http://bit.ly/3Vkdh6g
-    interval: 3600
+    interval: 60
 script:
   code: |
     def main(ctx, metadata):
         ruleset_action = {"Game": "GAMING",
-            "Sosmed": "SIMASTER-AUTO",
-            "Stream": "SIMASTER-AUTO",
-            "Olshop": "SIMASTER-AUTO",
-            "Bank": "SIMASTER-AUTO",
+            "Sosmed": "SIMASTER-MAGISK-AUTO",
+            "Stream": "SIMASTER-MAGISK-AUTO",
+            "Olshop": "SIMASTER-MAGISK-AUTO",
+            "Bank": "SIMASTER-MAGISK-AUTO",
             "Whatsapp": "WHATSAPP",
           }
 
@@ -341,8 +236,8 @@ script:
 
         if metadata["network"] == "UDP":
             if port == "21,22,23,53,80,443,8443":
-                ctx.log('[Script] matched QUIC traffic use SIMASTER-AUTO')
-                return "SIMASTER-AUTO"
+                ctx.log('[Script] matched QUIC traffic use SIMASTER-MAGISK-AUTO')
+                return "SIMASTER-MAGISK-AUTO"
 
         if metadata["dst_ip"] == "":
             metadata["dst_ip"] = ctx.resolve_ip(metadata["host"])
@@ -362,33 +257,17 @@ script:
         code = ctx.geoip(metadata["dst_ip"])
         if code == "ID":
             ctx.log('[Script] Geoip ID')
-            return "SIMASTER-AUTO"
+            return "SIMASTER-MAGISK-AUTO"
 
         ctx.log('[Script] SIMASTER-AUTO')
-        return "SIMASTER-AUTO"
+        return "SIMASTER-MAGISK-AUTO"
 rules:
 - IP-CIDR,198.18.0.1/16,REJECT,no-resolve
 - RULE-SET,Game,GAMING
-- RULE-SET,Sosmed,SIMASTER-AUTO
-- RULE-SET,Stream,SIMASTER-AUTO
-- RULE-SET,Olshop,SIMASTER-AUTO
-- RULE-SET,Bank,SIMASTER-AUTO
+- RULE-SET,Sosmed,SIMASTER-MAGISK-AUTO
+- RULE-SET,Stream,SIMASTER-MAGISK-AUTO
+- RULE-SET,Olshop,SIMASTER-MAGISK-AUTO
+- RULE-SET,Bank,SIMASTER-MAGISK-AUTO
 - RULE-SET,Whatsapp,WHATSAPP
-- GEOIP,ID,SIMASTER-AUTO
-- MATCH,SIMASTER-AUTO
-tun:
-  enable: true
-  stack: system
-  auto-route: false
-  auto-detect-interface: false
-  dns-hijack:
-  - tcp://any:53
-profile:
-  store-selected: true
-  store-fake-ip: true
-secret: '123456'
-bind-address: "*"
-experimental:
-  sniff-tls-sni: true
-authentication:
-- Clash:hckUjOup
+- GEOIP,ID,SIMASTER-MAGISK-AUTO
+- MATCH,SIMASTER-MAGISK-AUTO
